--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,125 @@
+*{
+    box-sizing: border-box;
+}
+
+:root{
+    --colorBG: #171E26;
+    --white: #F5F6F8;
+    --green: #37A665;
+    --purple: #8E1064;
+    --purpleWhite: #E00082;
+    --btn-height: 2.5rem;
+}
+
 body{
-    background: cadetblue;
+    margin          : 0;
+    background      : #F5F6F8;
+    color           : var(--colorBG);
+    height          : 100vh;
+    font-family     : 'Open Sans', sans-serif;
+}
+
+video,iframe,img{
+    max-width : 100%;
+    height    : auto;
+    -ms-interpolation-mode: bicubic;
+    vertical-align: middle;
+    display: inline-block;
+}
+
+a{
+    cursor: pointer;
+}
+code{
+    font-family: 'Source Code Pro', monospace;
+}
+
+h1{
+    font-size: 3rem;
+    margin: 0;
+}
+
+.layout-container{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer{
+    margin-top: auto;
+}
+
+.main__header__background{
+    background: var(--colorBG);
+    height: 30rem;
+}
+
+.main__header__background img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.main__header{
+    position: relative;
+}
+
+.main__header .main__header__content{
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    color: var(--white);
+    width: 100%;
+}
+.main__header .main__header__content article{
+    max-width: 50rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    margin-right: auto;
+    margin-left: auto;
+}
+.main__header__content p{
+    color: #5D7787;
+}
+
+.btn-group{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.btn{
+    text-decoration: none;
+    display: inline-block;
+    padding: 0 1.6em;
+    /*border-radius: 6px;*/
+    line-height: var(--btn-height);
+    height: var(--btn-height);
+}
+
+.btn-white{
+    background: var(--white);
+    color: var(--colorBG);
+}
+
+.btn-green{
+    background: var(--green);
+    color: var(--white);
+}
+
+.btn-purple{
+    background: var(--purpleWhite);
+    color: var(--white);
+}
+
+.server-link{
+    background: #172A3A;
+    padding: 0 1rem;
+    color: var(--white);
+    line-height: var(--btn-height);
+    height: var(--btn-height);
 }
