--- a/public/main.css
+++ b/public/main.css
@@ -62,10 +62,12 @@ h1{
 
 .main__header{
     position: relative;
+
 }
 
 .main__header .main__header__content{
     position: absolute;
+    padding: 1rem;
     height: 100%;
     top: 0;
     left: 0;
@@ -89,6 +91,7 @@ h1{
 
 .btn-group{
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
@@ -122,4 +125,21 @@ h1{
     color: var(--white);
     line-height: var(--btn-height);
     height: var(--btn-height);
+}
+
+.sn-video{
+    height         : 0;
+    overflow       : hidden;
+    padding-bottom : 56.25%;
+    position       : relative;
+
+    margin: 5rem 1rem;
+}
+
+.sn-video iframe{
+    position : absolute;
+    top      : 0;
+    left     : 0;
+    width    : 100%;
+    height   : 100%;
 }
